# youtube-dl-server

./: .gitignore  Dockerfile  requirements.txt  setup.cfg  youtube-dl-server.py
youtube_dl_server/: __init__.py  server.py  utils.py  youtube.py
youtube_dl_server/static/: index.html  main.css  main.js
