[metadata]
name = youtube_dl_server
author = Dennis Lutter
author-email = lad1337@gmail.com
summary = simple web interface for youtube-dl
description-file = README.md
home-page = https://github.com/lad1337/youtube-dl
classifier =
    Environment :: Console
    Intended Audience :: Developers
    License :: Other/Proprietary License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries

[bdist_wheel]
universal = true

[entry_points]
console_scripts =
  youtube-dl-server = youtube_dl_server:run
